k8s/apps/monitoring/victoria-metrics/cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victoria-metrics
spec:
  ingressClassName: internal
  rules:
    - host: vm.cbannister.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmsingle-victoria
                port:
                  name: http
